--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
   },
